<resources>
    <string name="app_name">PATP6-Restaurante</string>
    <!--Login-->
    <string name="restaurante">Restaurante</string>
    <string name="user">Digite o usuário</string>
    <string name="senha">Digite sua senha</string>
    <string name="login">Login</string>
    <!--Menu-->
    <string name="bemvindo">Bem vindo!</string>
    <string name="comandas">Comandas</string>
    <string name="novacomanda">Nova Comanda</string>
    <string name="caixa">Caixa</string>
    <string name="admin">Administrador</string>
    <!--Geral-->
    <string name="salvar">Salvar</string>
    <string name="sair">Sair</string>
    <string name="voltar">Voltar</string>
    <string name="nova">Nova</string>
    <string name="ver">Ver</string>
    <string name="mais">+</string>
    <!--Comandas-->
    <string name="nomecliente">Nome do cliente</string>
    <string name="telefonecliente">Telefone do cliente</string>
    <string name="mesa">Mesa</string>
    <string name="cardapio">Cardápio</string>
    <string name="adicionarpedido">Adicionar Pedido</string>
    <string name="fecharcomanda">Fechar Comanda</string>
    <string name="vercomanda">Ver Comanda</string>
    <string name="exemplo">Lorem Ipsum is simply dummy text of the printing and typesetting industry</string>
    <!--Caixa-->
    <string name="comentario">Comentário</string>
    <string name="finalizar">Finalizar</string>
    <!--Pedidos-->
    <string name="pedidos">Pedidos</string>
    <string name="quantidade">Quantidade</string>
    <!--Administrador-->
    <string name="novologin">Novo Login</string>
    <string name="novocardapio">Novo Cardápio</string>
    <string name="verificarcomandas">Verificar Comandas</string>
    <string name="numerocomanda">Número da Comanda</string>
    <string name="descricao">Descrição do item</string>
    <string name="valor">Digite o valor</string>
    <string name="confirmasenha">Confirme a senha</string>

    <!--    Alerta-->
    <string name="senhaincorreta">Login ou Senha incorreta!</string>

    <!--Spinners-->
    <string-array name="spiCadastrarComandas">
        <item>Selecione uma comanda:</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>

    <string-array name="spiTipoPedidos">
        <item>Cardápio:</item>
        <item>Carnes</item>
        <item>Pizzas</item>
        <item>Lanches</item>
        <item>Petiscos</item>
        <item>Bebidas</item>
        <item>Cervejas</item>
        <item>Chopps</item>
    </string-array>

    <string-array name="spiPedidos">
        <item>Selecione o pedido:</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

    <string-array name="spiMesa">
        <item>Selecione uma mesa:</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

    <string-array name="spiFuncao">
        <item>Selecione uma função:</item>
        <item>1:Garçom</item>
        <item>2:Caixa</item>
        <item>3:Administrador</item>
    </string-array>

    <!--List Views-->
    <string-array name="lvPedidos">
        <item>1: Cachorro Quente: R$ 15,00</item>
        <item>2: Batata Frita: R$12,00</item>
        <item>3: Coca Cola 2L: R$10,00</item>
    </string-array>

    <string-array name="lvTotal">
        <item>TOTAL: R$37,00</item>
    </string-array>


    <string-array name="lvAdminComandas">
        <item>Comanda 1: Carlos Eduardo</item>
        <item>Comanda 2: Rafael Nogueira</item>
        <item>Comanda 3: Carla Ribeiro</item>
        <item>Comanda 4: Matheus Silva</item>
        <item>Comanda 5: Luciane Vasconcelos</item>
        <item>Comanda 6: Gabriel Junior</item>
    </string-array>

</resources>