<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Caixa">

    <TextView
        android:id="@+id/txtCaixaTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        android:text="@string/caixa"
        android:textAlignment="center"
        android:textSize="20sp"/>

    <Spinner
        android:id="@+id/SpiCaixa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="32dp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtCaixaTitulo"

        android:entries="@array/spiCadastrarComandas"
        android:textAlignment="center"
        />

    <TextView
        android:id="@+id/txtCaixaExemplo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/SpiCaixa"

        android:text="@string/exemplo"
        android:textAlignment="center"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/edCaixaComentario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtCaixaExemplo"

        android:inputType="text"
        android:hint="@string/comentario"
        android:importantForAutofill="no"/>

    <Button
        android:id="@+id/btCaixaVoltar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="32dp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btCaixaFinalizar"
        app:layout_constraintTop_toBottomOf="@id/edCaixaComentario"

        android:text="@string/voltar"/>

    <Button
        android:id="@+id/btCaixaFinalizar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="32dp"

        app:layout_constraintStart_toEndOf="@id/btCaixaVoltar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edCaixaComentario"

        android:text="@string/finalizar"/>

</androidx.constraintlayout.widget.ConstraintLayout>